--- a/hi.ipynb
+++ b/hi.ipynb
@@ -2,6 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 4 4 0 1 1 1 3 3 3 5 2 0 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "fp = \"c4data1/e0.npy\"\n",
+    "\n",
+    "arr = np.load(fp)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [3, 6, 2, 4, 2, 6, 0, 1, 2, 2, 2, 6, 6, 6, 6, 5, 1, 4, 5, 5, 5, 5, 2, 5, 0, 3, 3, 3, 1, 0, 0]\n",
+    "arr = np.array(arr)\n",
+    "np.save(\"minimaxgamesample.npy\", arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +48,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
